    current code.
  * [Roland] Stricter dependency on debconf, to fix a Lintian warning.
  * [Roland] Die on error when installing the DB.
  * [Roland] Do not forget 20021213.sql...
  * [Roland] Generate a random password for the LDAP stuff if the user
    doesn't provide one.
  * [Christian] Applied Olafur Osvaldsson patch #143, Incorrect user
    permissions on upload dir 

 -- Christian Bayle <bayle@debian.org>  Thu,  9 Jan 2003 21:13:02 +0100

gforge (3.0-0+8) experimental; urgency=low

  * [Christian] Reintroduce the possibility to define default home page in
    Themes
  * [Christian] Added subMenu in Layout
  * [Roland] Merged in everything that was done on the trunk since
    Branch_gforge was started.  That includes the plugin subsystem.
  * [Roland] Merged Branch_gforge back into the trunk.
  * [Christian] Removed dependency on php4-mcrypt
  * [Christian] Applied F. Elie patch theme init #73
  * [Christian] Applied F. Elie patch image and searchbox localisation #84 #85 

 -- Christian Bayle <bayle@debian.org>  Tue, 31 Dec 2002 13:12:48 +0100

gforge (3.0-0+7) experimental; urgency=low

  * [Christian] Added db upgrade 20021125-debian.sql
  * [Christian] See upstream Changelog
  * [Christian] Replacing html_get_alt_row_color with boxGetAltRowStyle
  * [Christian] Removed obsolete html_get_alt_row_color function
  * [Christian] FRS/QRS in gforge fashion
  * [Christian] Added Peerating parameter management

 -- Christian Bayle <bayle@debian.org>  Thu, 19 Dec 2002 00:27:27 +0100

gforge (3.0-0+5) experimental; urgency=low

  * [Christian] Merged mostly all change from gforge tree
    now changing the package name
  * [Christian] Applied Francisco Gimeno alias kikov supposed corrected patch
  * [Christian] Big renaming from sourceforge to gforge
  * [Christian] Added Jabber related French translation
  * [Christian] Added Jabber stuffs in local.inc.template
  * [Christian] Made sys_dbname sys_dbuser sys_dbhost debconf param